# Rust-Neural-Network

./: .gitignore  BUILD.md  Cargo.toml  README.md  USAGE.md
.cargo/: config.toml
.github/workflows/: ci.yml  perf.yml
benches/: core_ops.rs
examples/: basic.rs  classification.rs  library_usage.rs  xor.rs
src/: activations.rs  compression.rs  data.rs  diffusion.rs  distill.rs  distributed.rs  error.rs  finetune.rs  fused.rs  gpu.rs  gpu_kernels.rs  grpo.rs  gui.rs  int8.rs  interactive.rs  lib.rs  looped_transformer.rs  loss.rs  mamba.rs  nn.rs  offload.rs  optim.rs  position.rs  quant.rs  quantize.rs  reasoning.rs  rl.rs  self_improve.rs  serialize.rs  simd.rs  tensor.rs  ternary.rs  tokenizer.rs  train.rs
tests/: flash_attention.rs  grad_check.rs  looped_transformer.rs  mamba_diffusion.rs  production.rs  reasoning.rs  rl.rs  selective_scan.rs
